--- a/index.html
+++ b/index.html
@@ -34,26 +34,35 @@
     </section>
     
 
-    <section class="section-advantage">
+    <section class="section">
       <div class="container">
         <h2 class="hide">Advantage</h2>
-        <ul class="flex-container-advantage">
+        <ul class="flex-list-advantage">
+
           <li class="element-advantage">
+            <svg width="70" height="70">
+              <use href="./images/symbol-defs-adv.svg#antenna">
+              </svg>
             <h3 class="title-third">Strategy</h3>
-            <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and creative
+            <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
+              creative
               solution.</p>
           </li>
-          <li class="element-advantage">
+
+          <li class="element-advantage clock">
             <h3 class="title-third">Punctuality</h3>
             <p class="text-description">Bring the key message to the brand's audience for the best price within the shortest
               possible time.</p>
           </li>
-          <li class="element-advantage">
+
+          <li class="element-advantage diagram">
             <h3 class="title-third">Diligence</h3>
-            <p class="text-description">Research and confirm brands that present the strongest digital growth opportunities and
+            <p class="text-description">Research and confirm brands that present the strongest digital growth opportunities
+              and
               minimize risk.</p>
           </li>
-          <li class="element-advantage">
+
+          <li class="element-advantage astronaut">
             <h3 class="title-third">Technologies</h3>
             <p class="text-description">Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.</p>
@@ -83,10 +92,30 @@
               <h3 class="title-third">Mark Guerrero</h3>
               <p class="text-description test-">Product Designer</p>
               <ul class="socials">
-                <li><a href=""><img src="./images/Ellipse1.svg" alt="instagram"></a></li>
-                <li><a href=""><img src="./images/Ellipse2.svg" alt="twitter"></a></li>
-                <li><a href=""><img src="./images/Ellipse3.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="./images/Ellipse4.svg" alt="linkedin"></a></li>
+                <li><a class="link-icon" href="">
+                  <svg class="socials-icon">
+                    <use href="./images/symbol-defs.svg#instagram">
+                    </use>
+                  </svg>
+                </a></li>
+                <li><a class="link-icon" href="">
+                  <svg class="socials-icon">
+                    <use href="./images/symbol-defs.svg#twitter">
+                    </use>
+                  </svg>
+                </a></li>
+                <li><a class="link-icon" href="">
+                  <svg class="socials-icon">
+                    <use href="./images/symbol-defs.svg#facebook">
+                    </use>
+                  </svg>
+                </a></li>
+                <li><a class="link-icon" href="">
+                  <svg class="socials-icon">
+                    <use href="./images/symbol-defs.svg#linkedin">
+                    </use>
+                  </svg>
+                </a></li>
               </ul>
             </div>
           </li>
@@ -96,10 +125,30 @@
               <h3 class="title-third">Tom Ford</h3>
               <p class="text-description">Frontend Developer</p>
               <ul class="socials">
-                <li><a href=""><img src="./images/Ellipse1.svg" alt="instagram"></a></li>
-                <li><a href=""><img src="./images/Ellipse2.svg" alt="twitter"></a></li>
-                <li><a href=""><img src="./images/Ellipse3.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="./images/Ellipse4.svg" alt="linkedin"></a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#instagram">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#twitter">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#facebook">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#linkedin">
+                      </use>
+                    </svg>
+                  </a></li>
               </ul>
             </div>
           </li>
@@ -109,10 +158,30 @@
               <h3 class="title-third">Camila Garcia</h3>
               <p class="text-description">Marketing</p>
               <ul class="socials">
-                <li><a href=""><img src="./images/Ellipse1.svg" alt="instagram"></a></li>
-                <li><a href=""><img src="./images/Ellipse2.svg" alt="twitter"></a></li>
-                <li><a href=""><img src="./images/Ellipse3.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="./images/Ellipse4.svg" alt="linkedin"></a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#instagram">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#twitter">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#facebook">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#linkedin">
+                      </use>
+                    </svg>
+                  </a></li>
               </ul>
             </div>
           </li>
@@ -122,36 +191,36 @@
               <h3 class="title-third">Daniel Wilson</h3>
               <p class="text-description">UI Designer</p>
               <ul class="socials">
-                <li><a href=""><img src="./images/Ellipse1.svg" alt="instagram"></a></li>
-                <li><a href=""><img src="./images/Ellipse2.svg" alt="twitter"></a></li>
-                <li><a href=""><img src="./images/Ellipse3.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="./images/Ellipse4.svg" alt="linkedin"></a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#instagram">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#twitter">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#facebook">
+                      </use>
+                    </svg>
+                  </a></li>
+                <li><a class="link-icon" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/symbol-defs.svg#linkedin">
+                      </use>
+                    </svg>
+                  </a></li>
               </ul>
             </div>
           </li>
         </ul>
       </div>
-      <!-- Test -->
-      <div>
-            <a class="social-test-sprite" href="">
-              <svg  class="svg-twitter" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                <title>twitter-1</title>
-                <path 
-                  d="M32 6.078c-1.19 0.522-2.458 0.868-3.78 1.036 1.36-0.812 2.398-2.088 2.886-3.626-1.268 0.756-2.668 1.29-4.16 1.588-1.204-1.282-2.92-2.076-4.792-2.076-3.632 0-6.556 2.948-6.556 6.562 0 0.52 0.044 1.020 0.152 1.496-5.454-0.266-10.28-2.88-13.522-6.862-0.566 0.982-0.898 2.106-0.898 3.316 0 2.272 1.17 4.286 2.914 5.452-1.054-0.020-2.088-0.326-2.964-0.808 0 0.020 0 0.046 0 0.072 0 3.188 2.274 5.836 5.256 6.446-0.534 0.146-1.116 0.216-1.72 0.216-0.42 0-0.844-0.024-1.242-0.112 0.85 2.598 3.262 4.508 6.13 4.57-2.232 1.746-5.066 2.798-8.134 2.798-0.538 0-1.054-0.024-1.57-0.090 2.906 1.874 6.35 2.944 10.064 2.944 12.072 0 18.672-10 18.672-18.668 0-0.29-0.010-0.57-0.024-0.848 1.302-0.924 2.396-2.078 3.288-3.406z">
-                </path>
-              </svg>
-            </a>
-      </div>
-<!-- Test2 -->
-      <div>
-            <a href="">
-              <svg class="social-test-inline">
-                <use href="./images/symbol-defs.svg#twitter">
-                   </use>
-              </svg>
-            </a>
-      </div>
-      
+
     </section>
     <section class="section">
       <div class="container">
@@ -180,10 +249,30 @@
         <div class="footer-box2">
           <p class="media-footer">social media</p>
           <ul class="links-footer">
-            <li><a href=""></a><img src="./images/Ellipse-f1.svg" alt="instagram"></li>
-            <li><a href=""></a><img src="./images/Ellipse-f2.svg" alt="twitter"></li>
-            <li><a href=""></a><img src="./images/Ellipse-f3.svg" alt="facebook"></li>
-            <li><a href=""></a><img src="./images/Ellipse-f4.svg" alt="linkedin"></li>
+            <li><a class="link-icon icon-footer" href="">
+                <svg class="socials-icon">
+                  <use href="./images/symbol-defs.svg#instagram">
+                  </use>
+                </svg>
+              </a></li>
+            <li><a class="link-icon icon-footer" href="">
+                <svg class="socials-icon">
+                  <use href="./images/symbol-defs.svg#twitter">
+                  </use>
+                </svg>
+              </a></li>
+            <li><a class="link-icon icon-footer" href="">
+                <svg class="socials-icon">
+                  <use href="./images/symbol-defs.svg#facebook">
+                  </use>
+                </svg>
+              </a></li>
+            <li><a class="link-icon icon-footer" href="">
+                <svg class="socials-icon">
+                  <use href="./images/symbol-defs.svg#linkedin">
+                  </use>
+                </svg>
+              </a></li>
           </ul>
         </div>
     </div>
