--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
               <ul class="socials">
                 <li><a class="link-icon" href="">
                   <svg class="socials-icon">
-                    <use href="./images/symbol-defs.svg#instagram">
+                    <use href="./images/icons.svg#instagram">
                     </use>
                   </svg>
                 </a></li>
                 <li><a class="link-icon" href="">
                   <svg class="socials-icon">
-                    <use href="./images/symbol-defs.svg#twitter">
+                    <use href="./images/icons.svg#twitter">
                     </use>
                   </svg>
                 </a></li>
                 <li><a class="link-icon" href="">
                   <svg class="socials-icon">
-                    <use href="./images/symbol-defs.svg#facebook">
+                    <use href="./images/icons.svg#facebook">
                     </use>
                   </svg>
                 </a></li>
                 <li><a class="link-icon" href="">
                   <svg class="socials-icon">
-                    <use href="./images/symbol-defs.svg#linkedin">
+                    <use href="./images/icons.svg#linkedin">
                     </use>
                   </svg>
                 </a></li>
@@ -127,25 +127,25 @@
               <ul class="socials">
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#instagram">
+                      <use href="./images/icons.svg#instagram">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#twitter">
+                      <use href="./images/icons.svg#twitter">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#facebook">
+                      <use href="./images/icons.svg#facebook">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#linkedin">
+                      <use href="./images/icons.svg#linkedin">
                       </use>
                     </svg>
                   </a></li>
@@ -160,25 +160,25 @@
               <ul class="socials">
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#instagram">
+                      <use href="./images/icons.svg#instagram">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#twitter">
+                      <use href="./images/icons.svg#twitter">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#facebook">
+                      <use href="./images/icons.svg#facebook">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#linkedin">
+                      <use href="./images/icons.svg#linkedin">
                       </use>
                     </svg>
                   </a></li>
@@ -193,25 +193,25 @@
               <ul class="socials">
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#instagram">
+                      <use href="./images/icons.svg#instagram">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#twitter">
+                      <use href="./images/icons.svg#twitter">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#facebook">
+                      <use href="./images/icons.svg#facebook">
                       </use>
                     </svg>
                   </a></li>
                 <li><a class="link-icon" href="">
                     <svg class="socials-icon">
-                      <use href="./images/symbol-defs.svg#linkedin">
+                      <use href="./images/icons.svg#linkedin">
                       </use>
                     </svg>
                   </a></li>
