--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
         <h2 class="hide">Advantage</h2>
         <ul class="flex-list-advantage">
 
-          <li class="element-advantage">
-            <svg width="70" height="70">
-              <use href="./images/symbol-defs-adv.svg#antenna">
-              </svg>
+          <li class="element-advantage antenna">
             <h3 class="title-third">Strategy</h3>
             <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
               creative
@@ -226,12 +223,36 @@
       <div class="container">
         <h2 class="second-title">Customers</h2>
         <ul class="flex-customers">
-          <li><a href=""><img src="./images/Client1.svg" alt="client1" width="168" height="88"></a></li>
-          <li><a href=""><img src="./images/Client2.svg" alt="client2" width="168" height="88"></a></li>
-          <li><a href=""><img src="./images/Client3.svg" alt="client3" width="168" height="88"></a></li>
-          <li><a href=""><img src="./images/Client4.svg" alt="client4" width="168" height="88"></a></li>
-          <li><a href=""><img src="./images/Client5.svg" alt="client5" width="168" height="88"></a></li>
-          <li><a href=""><img src="./images/Client6.svg" alt="client6" width="168" height="88"></a></li>
+          <li><a class="customers-bg" href="">
+            <svg class="icon-customers">
+              <use href="./images/icons.svg#client1"></use> 
+            </svg>
+          </a></li>
+          <li><a class="customers-bg" href="">
+            <svg class="icon-customers">
+              <use href="./images/icons.svg#client2"></use> 
+            </svg>
+          </a></li>
+          <li><a class="customers-bg" href="">
+            <svg class="icon-customers">
+              <use href="./images/icons.svg#client3"></use> 
+            </svg>
+          </a></li>
+          <li><a class="customers-bg" href="">
+            <svg class="icon-customers">
+              <use href="./images/icons.svg#client4"></use> 
+            </svg>
+          </a></li>
+          <li><a class="customers-bg" href="">
+            <svg class="icon-customers">
+              <use href="./images/icons.svg#client5"></use> 
+            </svg>
+          </a></li>
+          <li><a class="customers-bg" href="">
+            <svg class="icon-customers">
+              <use href="./images/icons.svg#client6"></use> 
+            </svg>
+          </a></li>
         </ul>
       </div>
       
@@ -249,30 +270,34 @@
         <div class="footer-box2">
           <p class="media-footer">social media</p>
           <ul class="links-footer">
-            <li><a class="link-icon icon-footer" href="">
+            <li><a class="link-icon bg-footer-icon" href="">
                 <svg class="socials-icon">
-                  <use href="./images/symbol-defs.svg#instagram">
+                  <use href="./images/icons.svg#instagram">
                   </use>
                 </svg>
-              </a></li>
-            <li><a class="link-icon icon-footer" href="">
+              </a>
+            </li>
+            <li><a class="link-icon bg-footer-icon" href="">
                 <svg class="socials-icon">
-                  <use href="./images/symbol-defs.svg#twitter">
+                  <use href="./images/icons.svg#twitter">
                   </use>
                 </svg>
-              </a></li>
-            <li><a class="link-icon icon-footer" href="">
+              </a>
+            </li>
+            <li><a class="link-icon bg-footer-icon" href="">
                 <svg class="socials-icon">
-                  <use href="./images/symbol-defs.svg#facebook">
+                  <use href="./images/icons.svg#facebook">
                   </use>
                 </svg>
-              </a></li>
-            <li><a class="link-icon icon-footer" href="">
+              </a>
+            </li>
+            <li><a class="link-icon bg-footer-icon" href="">
                 <svg class="socials-icon">
-                  <use href="./images/symbol-defs.svg#linkedin">
+                  <use href="./images/icons.svg#linkedin">
                   </use>
                 </svg>
-              </a></li>
+              </a>
+            </li>
           </ul>
         </div>
     </div>
