--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <main>
   
         <section class="section">
-            <h1 class="hide">Portfolio</h2>
+            <h1 class="hide">Portfolio</h1>
             <ul class="buttons-main">
                 <li><button class="btn-main" type="button">All</button></li>
                 <li><button class="btn-main" type="button">Web Site</button></li>
@@ -136,15 +136,41 @@
         <div class="container flex-footer">
             <div class="footer-box1">
                 <a class="link logo" href="./index.html">Web<span class="accent-logo-footer">studio</span></a>
-                <p class="info-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                <p class="info-footer">Increase the flow of customers and sales for your business with digital marketing &
+                    growth
+                    solutions.</p>
             </div>
             <div class="footer-box2">
                 <p class="media-footer">social media</p>
                 <ul class="links-footer">
-                    <li><a href=""></a><img src="./images/Ellipse-f1.svg" alt="instagram"></li>
-                    <li><a href=""></a><img src="./images/Ellipse-f2.svg" alt="twitter"></li>
-                    <li><a href=""></a><img src="./images/Ellipse-f3.svg" alt="facebook"></li>
-                    <li><a href=""></a><img src="./images/Ellipse-f4.svg" alt="linkedin"></li>
+                    <li><a class="link-icon bg-footer-icon" href="">
+                            <svg class="socials-icon">
+                                <use href="./images/icons.svg#instagram">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li><a class="link-icon bg-footer-icon" href="">
+                            <svg class="socials-icon">
+                                <use href="./images/icons.svg#twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li><a class="link-icon bg-footer-icon" href="">
+                            <svg class="socials-icon">
+                                <use href="./images/icons.svg#facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li><a class="link-icon bg-footer-icon" href="">
+                            <svg class="socials-icon">
+                                <use href="./images/icons.svg#linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
