--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
         </ul>
       </div>
     </section>
+    <!-- test -->
+    
+    <ul class="flex-list-advantage">
+    
+      <li class="element-advantage antenna">
+        <h3 class="title-third">Strategy</h3>
+        <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
+          creative
+          solution.</p>
+      </li>
+    </ul>
 
     <section class="section section-team">
       <div class="container">
