--- a/index.html
+++ b/index.html
@@ -38,31 +38,56 @@
       <div class="container">
         <h2 class="hide">Advantage</h2>
         <ul class="flex-list-advantage">
-
-          <li class="element-advantage antenna">
+          <li class="box-adv">
+            <div class="element-advantage">
+              <svg class="icon-adv">
+                <use href="./images/icons.svg#antenna">
+                </use>
+              </svg>
+            </div>
             <h3 class="title-third">Strategy</h3>
             <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
               creative
               solution.</p>
           </li>
 
-          <li class="element-advantage clock">
-            <h3 class="title-third">Punctuality</h3>
-            <p class="text-description">Bring the key message to the brand's audience for the best price within the shortest
-              possible time.</p>
+          <li class="box-adv">
+            <div class="element-advantage">
+              <svg class="icon-adv">
+                <use href="./images/icons.svg#clock">
+                </use>
+              </svg>
+            </div>
+            <h3 class="title-third">Strategy</h3>
+            <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
+              creative
+              solution.</p>
           </li>
 
-          <li class="element-advantage diagram">
-            <h3 class="title-third">Diligence</h3>
-            <p class="text-description">Research and confirm brands that present the strongest digital growth opportunities
-              and
-              minimize risk.</p>
+          <li class="box-adv">
+              <div class="element-advantage">
+                <svg class="icon-adv">
+                  <use href="./images/icons.svg#diagram">
+                  </use>
+                </svg>
+              </div>
+              <h3 class="title-third">Strategy</h3>
+              <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
+                creative
+                solution.</p>
           </li>
 
-          <li class="element-advantage astronaut">
-            <h3 class="title-third">Technologies</h3>
-            <p class="text-description">Design practice focused on digital experiences. We bring forth a deep passion for
-              problem-solving.</p>
+          <li class="box-adv">
+            <div class="element-advantage">
+              <svg class="icon-adv">
+                <use href="./images/icons.svg#astronaut">
+                </use>
+              </svg>
+            </div>
+            <h3 class="title-third">Strategy</h3>
+            <p class="text-description">Our goal is to identify the business problem to walk away with the perfect and
+              creative
+              solution.</p>
           </li>
         </ul>
       </div>
