--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
             <a class="link logo" href="./index.html">Web<span class="accent-logo">studio</span></a>
             <nav>
                 <ul class="nav-flex">
-                    <li><a class="link link-header link-current" href="./index.html">Studio</a></li>
-                    <li><a class="link link-header" href="./portfolio.html" target="_blank"
+                    <li><a class="link link-header" href="./index.html">Studio</a></li>
+                    <li><a class="link link-header link-current" href="./portfolio.html" target="_blank"
                             rel="noreferrer nofollow">Portfolio</a>
                     </li>
                     <li><a class="link link-header" href="">Contacts</a></li>
