--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <ul class="flex-examples">
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link link-examples" href="">
                             <img src="./images/works1.jpg" alt="banking">
                             <div class="box-description">
                                 <h2 class="title-card">Banking App Interface Concept</h2>
