--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works2.jpg" alt="cashless">
                             <div class="box-description">
                                 <h2 class="title-card">Cashless Payment</h2>
@@ -64,7 +64,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works3.jpg" alt="meditation">
                             <div class="box-description">
                                 <h2 class="title-card">Meditaion App</h2>
@@ -73,7 +73,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works4.jpg" alt="taxi">
                             <div class="box-description">
                                 <h2 class="title-card">Taxi Service</h2>
@@ -82,7 +82,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works5.jpg" alt="screen-illustration">
                             <div class="box-description">
                                 <h2 class="title-card">Screen Illustrations</h2>
@@ -91,7 +91,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works6.jpg" alt="courses">
                             <div class="box-description">
                                 <h2 class="title-card">Online Courses</h2>
@@ -100,7 +100,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works7.jpg" alt="stories">
                             <div class="box-description">
                                 <h2 class="title-card">Instagram Stories Concept</h2>
@@ -109,7 +109,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works8.jpg" alt="organic">
                             <div class="box-description">
                                 <h2 class="title-card">Organic Food</h2>
@@ -118,7 +118,7 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="">
+                        <a class="link  link-examples" href="">
                             <img src="./images/works9.jpg" alt="coffe">
                             <div class="box-description">
                                 <h2 class="title-card">Fresh Coffee</h2>
